[metadata]
name = PyroLab
version = 0.2.1
description = A framework for using remote lab instruments as local resources built on Pyro5
long_description = file: README.md
long_description_content_type = text/markdown
author = Sequoia Ploeg
author_email = sequoia.ploeg@byu.edu
url = https://github.com/BYUCamachoLab/pyrolab
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
license = GPLv3+
keywords = PyroLab, Pyro5, Pyro, lab, instrument, remote, resources, framework, laboratory, instrumentation, hardware, science, remote, network, integration
platforms = Windows, Linux, Mac OS-X
project_urls = 
    Source = https://github.com/BYUCamachoLab/pyrolab
    Documentation = https://pyrolab.readthedocs.io/en/latest/
    Tracker = https://github.com/sequoiap/pyrolab/issues
    Research Group = https://camacholab.byu.edu/

[options]
python_requires = >=3.7
packages = find:
setup_requires = 
    pip >= 21.1
install_requires = 
    numpy
    scipy
    Pyro5
    pydantic
    pyyaml
    appdirs
    deprecation
    appnope
    typer
    colorama
    tabulate

[options.entry_points]
console_scripts =
    pyrolab = pyrolab.cli:app

[options.extras_require]
tsl550 =
    pyserial
ppcl55x =
    pyserial
rto =
    pyvisa
    pyvisa-py
arduino =
    pyfirmata
    